--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Política de Privacidade - Seu Launcher Personalizável</title>
+    <title>Política de Privacidade - Seu Natan Launcher</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -33,12 +33,12 @@
 </head>
 <body>
 
-    <h1>Política de Privacidade do Seu Launcher Personalizável</h1>
+    <h1>Política de Privacidade do Seu Natan Launcher</h1>
 
-    <p>A sua privacidade é de extrema importância para nós. É política do **Seu Launcher Personalizável** respeitar a sua privacidade em relação a qualquer informação sua. Nosso aplicativo é projetado para ser uma tela inicial simples e personalizável, focada na experiência do usuário e na proteção de seus dados.</p>
+    <p>A sua privacidade é de extrema importância para nós. É política do **Seu Natan Launcher** respeitar a sua privacidade em relação a qualquer informação sua. Nosso aplicativo é projetado para ser uma tela inicial simples e personalizável, focada na experiência do usuário e na proteção de seus dados.</p>
 
     <h2>1. Sobre o Aplicativo e a Coleta de Informações</h2>
-    <p>O aplicativo **Seu Launcher Personalizável** funciona como uma tela inicial (launcher) para o seu dispositivo Android, permitindo que você organize e acesse seus aplicativos de forma eficiente, além de personalizar o plano de fundo e as cores do texto e dos ícones.</p>
+    <p>O aplicativo **Seu Natan Launcher** funciona como uma tela inicial (launcher) para o seu dispositivo Android, permitindo que você organize e acesse seus aplicativos de forma eficiente, além de personalizar o plano de fundo e as cores do texto e dos ícones.</p>
     <p>É importante ressaltar que **nosso aplicativo não coleta, armazena ou transmite quaisquer dados pessoais ou de uso para servidores externos**. Todas as suas preferências de personalização (como a cor de fundo, a imagem de plano de fundo e a cor do texto/ícones) são **salvas localmente** no seu dispositivo, garantindo total privacidade e controle sobre suas escolhas.</p>
     <p>Não coletamos informações sensíveis como dados de saúde, financeiros ou biométricos, nem quaisquer outros dados que possam identificá-lo pessoalmente.</p>
 
@@ -57,14 +57,14 @@
 
     <h2>5. Serviços de Terceiros e Links Externos</h2>
     <p>Nosso aplicativo não contém links para sites ou serviços externos operados por nós ou por terceiros, e não incorpora serviços de publicidade ou análise de terceiros que coletem dados do usuário.</p>
-    <p>Ao abrir outros aplicativos instalados no seu dispositivo através do **Seu Launcher Personalizável**, as políticas de privacidade desses aplicativos terceiros se aplicam. Não temos controle sobre o conteúdo e as práticas de privacidade de outros aplicativos e não podemos aceitar responsabilidade por eles.</p>
+    <p>Ao abrir outros aplicativos instalados no seu dispositivo através do **Seu Natan Launcher**, as políticas de privacidade desses aplicativos terceiros se aplicam. Não temos controle sobre o conteúdo e as práticas de privacidade de outros aplicativos e não podemos aceitar responsabilidade por eles.</p>
 
     <h2>6. Compromisso do Usuário</h2>
-    <p>O usuário se compromete a fazer uso adequado dos conteúdos e da informação que o **Seu Launcher Personalizável** oferece e com caráter enunciativo, mas não limitativo:</p>
+    <p>O usuário se compromete a fazer uso adequado dos conteúdos e da informação que o **Seu Natan Launcher** oferece e com caráter enunciativo, mas não limitativo:</p>
     <ul>
         <li>A) Não se envolver em atividades que sejam ilegais ou contrárias à boa fé e à ordem pública;</li>
         <li>B) Não difundir propaganda ou conteúdo de natureza racista, xenofóbica, jogos de sorte ou azar, qualquer tipo de pornografia ilegal, de apologia ao terrorismo ou contra os direitos humanos;</li>
-        <li>C) Não causar danos aos sistemas físicos (hardwares) e lógicos (softwares) do **Seu Launcher Personalizável**, de seus fornecedores ou terceiros, para introduzir ou disseminar vírus informáticos ou quaisquer outros sistemas de hardware ou software que sejam capazes de causar danos anteriormente mencionados.</li>
+        <li>C) Não causar danos aos sistemas físicos (hardwares) e lógicos (softwares) do **Seu Natan Launcher**, de seus fornecedores ou terceiros, para introduzir ou disseminar vírus informáticos ou quaisquer outros sistemas de hardware ou software que sejam capazes de causar danos anteriormente mencionados.</li>
     </ul>
 
     <h2>7. Alterações nesta Política de Privacidade</h2>
